# draw.lib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  draw.json
contrib/: CMakeLists.txt
contrib/glad/: prepare.sh
contrib/glad/include/glad/: glad.h
contrib/glad/src/: glad.c
engine/: CMakeLists.txt
engine/include/draw/: error_t.hpp  event_t.hpp  frameStage_t.hpp  settings_t.hpp  system_t.hpp
engine/src/: event_t.cpp  input_t.cpp  mesh_t.cpp  settings_t.cpp  system_t.cpp  targa.cpp  texture_t.cpp  vao_t.cpp
evoid/: CMakeLists.txt
evoid/include/: events.hpp  menu.hpp  scenes.hpp
evoid/runtime/: draw.json  evoid.sh
evoid/src/: evoid.cpp  menu.cpp  scenes.cpp
examples/: 000.cpp  CMakeLists.txt  console.cpp  console.hpp
examples/ex000/: console.cpp
include/: draw.hpp
include/draw/: camera_t.hpp  config.h.in  error_t.hpp  frameStage_t.hpp  input_t.hpp  jsonHelpers.hpp  mesh_t.hpp  precompile.hpp  settings_t.hpp  shader_t.hpp  system_t.hpp  texture_t.hpp  vao_t.hpp
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml
share/: nfont-rle.tga  nfont.json  nfont.tga  road.tga
src/: camera_t.cpp  draw.cpp  input_t.cpp  mesh_t.cpp  settings_t.cpp  shader_t.cpp  system_t.cpp  targa.cpp  texture_t.cpp  vao_t.cpp  wavefront.cpp
